# wmgr

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  package.json
docs/: architecture.md  commands.md  config.md  security.md
src/: alloc.rs  cli.js  cli.rs  main.rs
src/app/: cli.rs  cli_mode.rs  defaults.rs  mod.rs
src/app/commands/: balance.rs  config_cmd.rs  hash.rs  mod.rs  price.rs  send.rs  swap.rs
src/commands/: balance.rs  mod.rs  send.rs
src/config/: app_config.rs  clusters.js  clusters.rs  evmNetworks.js  evm_networks.rs  mnemonics.js  mnemonics.rs  mod.rs  raydium.rs
src/core/: amm_math.rs  amount.rs  mod.rs
src/infra/: evm.rs  mod.rs  raydium.rs  solana.rs
src/infra/keys/: evm.rs  mod.rs  solana.rs  svpi.rs
src/keys/: evm.js  evm.rs  index.js  solana.rs  svpi.js  svpi.rs
src/services/: balance.js  evm.js  evm.rs  sol.js  solana.rs  spl.js
src/solana/: connection.js
src/utils/: amount.js  amount.rs  mod.rs  prompt.js  prompt.rs  terminal.rs
