[package]
name = "wmgr"
version = "3.0.0"
edition = "2021"
description = "Wallet Manager CLI for Solana and EVM networks"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
borsh = "1.6.0"
borsh-derive = "1.6.0"
bip39 = { package = "tiny-bip39", version = "2.0.0" }
shlex = "1.3.0"
rustyline = "17.0.2"
sha2 = "0.10.9"
hex = "0.4.3"
solana-client = "3.1.8"
zeroize = "1.8.2"
solana-sdk = "3.0.0"
solana-commitment-config = "3.1.0"
solana-derivation-path = "3.0.0"
solana-keypair = { version = "3.1.0", features = ["seed-derivable"] }
solana-system-interface = "2.0.0"
spl-associated-token-account = { version = "8.0.0", features = [
    "no-entrypoint",
] }
spl-associated-token-account-interface = "2.0.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"] }
ethers = "2.0"
rpassword = "7.4.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
raydium-amm-swap = "0.1.21"
